# raidwatch

./: .gitignore  AGENTS.md  PLAN.md  README.md  SETUP_GUIDE.md  config.yaml.example  install.ps1  pyproject.toml  requirements.txt  tailwind.config.js
.docs/: DECISIONS.md  DESIGN.md
raidwatch/: __init__.py  auth.py  broker.py  collector.py  config.py  database.py  gates.py  health.py  main.py  models.py  supervisor.py
raidwatch/modules/: __init__.py  fika.py  system.py  temps.py
scripts/: build_tailwind.py  collect_once.py  discover_processes.py  fetch_lhm.ps1  install_service.ps1  install_win_deps.ps1  probe_temps.py  probe_whea.py  restart_service.ps1  smoke_test_m2.py  smoke_test_m3.py  stress_test_sim.py  uninstall_service.ps1  validate_windows.ps1
static/: app.js
static/src/: tailwind.css
templates/: base.html  dashboard.html  login.html
tests/: test_auth.py  test_broker.py  test_collector.py  test_config_validation.py  test_downsampling.py  test_fika_health.py  test_gate_timing.py  test_health.py  test_log_regex.py  test_main_api.py  test_supervisor.py  test_temps.py  test_whea_window.py
